name:                Gringotz
version:             0.1.0.0
synopsis:            Gringotz level generator
description:         Please see README.md
--homepage:            http://github.com/hans25041/gringotz
license:             BSD3
license-file:        LICENSE
author:              Chris Hanson
maintainer:          hanson4288@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Level
                     , Maze
                     , Patch
                     , Row
                     , Tile
                     , Utilities
                     , Vault
  build-depends:       base          >= 4.7  && < 5
                     , array         >= 0.5  && < 0.6
                     , random        >= 1.1  && < 1.2
                     , random-fu     >= 0.2  && < 0.3
                     , random-extras >= 0.19 && < 0.20
  default-language:    Haskell2010

executable level-generator
  hs-source-dirs:      app
  main-is:             Generator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Gringotz
  default-language:    Haskell2010

--test-suite new-template-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , new-template
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
--
--source-repository head
--  type:     git
--  location: https://github.com/name/project
